vemo-app/main/default/objects/ProgramEligibility__c/ProgramEligibility__c.object-meta.xml
<CustomObject>
    <label>Program Eligibility</label>
    <nameField>
        <displayFormat>PE-{00000}</displayFormat>
        <label>Program Eligibility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Eligibility</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>