vemo-app/main/default/objects/ProgramEligibility__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <type>TextArea</type>
</CustomField>