vemo-app/main/default/objects/ProgramEligibility__c/fields/EnrollmentStatus__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatus__c</fullName>
    <label>Enrollment Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>