vemo-app/main/default/objects/ProgramEligibility__c/fields/Residency__c.field-meta.xml
<CustomField>
    <fullName>Residency__c</fullName>
    <label>Residency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>